{
    "name": "InputAction",
    "maps": [
        {
            "name": "Touch",
            "id": "272c3ded-983c-48e1-adf2-15e7b55a2db6",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "f79e0e9b-74d7-4183-91c3-357111d47b7a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "68b6d9ac-ac60-4db2-bdc6-dab21ed19751",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b73c6481-673d-42fa-9ac8-5c82a8977672",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e63caaa3-aba6-42da-8198-04675ef3856d",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}